test/scc/expr/semantic-errors/158.a
158.t:13:10: error: assignment from incompatible pointer type